tests/miniJava/neg/006716_mutation.MiniJava
class java { public static void int [] ( String [ ] java ) { { } } }
